components/shared/ContentPagesSidebar/Sidebar.css
@value bambooOrange from "../../../css/colors.css";

.link {
  font-size: 1.25rem;
  line-height: 2rem;
}

.sidebar {
  flex-shrink: 0;
  max-width: 240px;
}

.divider {
  height: 2px;
  background-color: rgba(0, 0, 0, 0.2);
  display: block;
  width: 100%;
  margin: 18px 0;
}

.selected {
  font-weight: bold;
  color: black;
  position: relative;
}

.selected::after {
  display: block;
  content: "";
  position: absolute;
  height: 5px;
  width: 5px;
  top: 14px;
  left: -10px;
  background-color: bambooOrange;
  border-radius: 50%;
}

.sidebar ul ul {
  margin-left: 1.25rem;

  & .link:not(.selected) {
    color: #6D6D6D;
  }

  & .link {
    line-height: 1.05;
    margin-bottom: 0.5rem;
  }
}

